# hello-rust-actix

./: .gitignore  .glitch-assets  .lesshst  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  glitch.json
.infra/: .gitignore  requirements.txt
.infra/templates/: s3_bucket_policy.json
glitch/: build.sh  env.sh  install.sh  start.sh
infra/: README.md  ansible.cfg  hosts  requirements.txt.frozen  site.yml
infra/group_vars/all/: vault.yml
src/: main.rs
templates/: index.html
